NMS-20219: add tool caller context, input validation and audit logging